# Teloxi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
teloxi/: __init__.py  version.py
teloxi/core/: __init__.py  auth.py  client.py  exception.py  extend.py  imports.py
teloxi/device/: __init__.py  api.py  devices.py
teloxi/extra/: __init__.py  enums.py  features.py  link_parser.py  objects.py
teloxi/profile/: __init__.py  generator.py  persian_names.json  universal_names.json
teloxi/storage/: __init__.py  database.py
teloxi/utils/: __init__.py  config.py  objects.py
