[build-system]
requires = [
    'setuptools>=80.0.0',
    'wheel',
]
build-backend = "setuptools.build_meta"

[project]
name = "teloxi"
version = "1.0.2"
description = "A user-friendly library based on Telethon, with additional features and easier usage."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
    'telethon',
    'telegram',
    'telegram multi session',
    'telegram-python',
    'opentele',
    'openetele',
    'teloxi',
    'dbflux',
    'api',
    'abbas bachari',
    'عباس بچاری',
]
classifiers = [
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Operating System :: OS Independent',
]
dependencies = [
    'loguru>=0.7.3',
    'dbflux>=1.0.2',
    'telethon>=1.41.2',
    'python-socks[asyncio]>=2.7.2',
]

[[project.authors]]
name = "Abbas Bachari"
email = "abbas-bachari@hotmail.com"

[project.urls]
Homepage = "https://github.com/abbas-bachari/teloxi"
Documentation = "https://github.com/abbas-bachari/teloxi#readme"
Source = "https://github.com/abbas-bachari/teloxi"
